corrected font size and alignment of favorites, videos and related articles section title

--- a/assets/css/3-sections/_favoris.sass
+++ b/assets/css/3-sections/_favoris.sass
@@ -1,6 +1,7 @@
 #shop 
     h2
         margin-bottom: 40px
+        font-size: 20px
 
     .products
         height: 100%
