--- a/assets/css/3-sections/_video.sass
+++ b/assets/css/3-sections/_video.sass
@@ -1,4 +1,7 @@
 #lightroom
+    h2
+        font-size: 20px
+        
     .button
         @media (max-width: 1220px)
             width: 50%
